...
import com.worldwidewaves.shared.generated.resources.waves_icon_selected
import org.jetbrains.compose.resources.DrawableResource
import org.jetbrains.compose.resources.painterResource
import com.worldwidewaves.shared.generated.resources.Res as ShRes

enum class Tab {
    Events,
    About,
    Settings,
    None
}

@Composable
fun TabBar(modifier: Modifier = Modifier, selectedTab: Tab = Tab.None) {
...
