...
@Composable
fun SplashScreen(modifier: Modifier = Modifier) {
    Box(
        modifier =
            modifier
                .fillMaxSize()
                .testTag("splash-screen"),
    ) {
        Image(
            painter = painterResource(Res.drawable.background),
            contentDescription = stringResource(MokoRes.strings.background_description),
            contentScale = ContentScale.FillHeight,
            modifier = Modifier.fillMaxSize(),
...
